--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -1,23 +1,26 @@
 .auth-main{
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     min-width: 100%;
-    min-height: 90vh;
+    padding: 0;
+    margin: 0;
+    max-height: 100vh;
+    background-color: #fff;
 }
 
 .auth-info{
     flex-basis: 50%;
-    margin: auto;
-    min-height: 100vh;
+    
 }
 
 .auth-outlet{
     flex-basis: 50%;
     margin: auto;
+    max-height: 90vh;
 }
 
 .auth-forms{
 width: 100%;
-padding: 5rem;
+padding-top: 1rem;
 
 }
